[package]
name = "focusflow"
version = "0.1.0"
edition = "2021"
description = "Visual editor for HOI4 focus trees - Millennium Dawn"

[dependencies]
# Native UI
eframe = "0.31"
egui = "0.31"
egui_extras = "0.31"

# Paradox file parsing
jomini = { version = "0.34", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
